# violet_mail

./: Cargo.toml
.github/workflows/: publish.yml  rust.yml
src/: client.rs  lib.rs  log.rs
